more documentation and some additional components